[project]
name = "obds-dq"
version = "0.1.0"
description = "Data quality checks for obds-to-fhir output: Pathling (SQL on FHIR v2) extraction + sparkdq checks, both on Spark 4.x"
authors = [
    { name = "chgl", email = "chgl@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pathling>=9.8,<10",
    # sparkdq's own pyproject caps pyspark at <4.0 via its "spark" extra, which
    # we deliberately don't install here: pyspark is instead pulled in by
    # pathling>=9 (>=4.0,<4.1), and sparkdq's plain PySpark checks run fine
    # against it in practice (verified in this project's tests). See
    # dq/README.md.
    "sparkdq>=0.12,<0.13",
    "loguru>=0.7,<0.8",
]

[project.scripts]
obds-dq = "obds_dq.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.14,<0.15",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
