[project]
name = "obds-dq-checks"
version = "0.1.0"
description = "Data quality checks for obds-to-fhir output, implemented with sparkdq, dqx and pydeequ"
authors = [
    { name = "chgl", email = "chgl@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    # sparkdq, dqx and pydeequ target Spark 3.5.x. pyspark 4.x (required by
    # pathling>=9) is intentionally NOT used here, see dq/README.md.
    "pyspark==3.5.*",
    "sparkdq[spark]>=0.12,<0.13",
    "databricks-labs-dqx>=0.15,<0.16",
    "pydeequ>=1.6,<2",
    "loguru>=0.7,<0.8",
]

[project.scripts]
obds-dq-checks = "obds_dq_checks.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.14,<0.15",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
